# Optimized-Library-Lookup-System

./: .gitignore  CMakeLists.txt  README.md  TESTING_GUIDE.md  deletelater.md  requirements.txt
backup/: Borrower.cpp.before-names.txt
data/: book.csv  borrow_records.csv
src/: main.cpp  test_main.cpp
src/DataStructures/header/: HashTable.h  linkedList.h  mergeSort.h  trie.h
src/DataStructures/implementation/: HashTable.cpp  linkedList.cpp  mergeSort.cpp  trie.cpp
src/UI/: LibraryGUI.cpp  LibraryGUI.h
src/entities/header/: BorrowRecord.h  book.h  user.h
src/entities/implementation/: BorrowRecord.cpp  book.cpp  user.cpp
src/modules/header/: BookManager.h  Borrower.h  SearchAndSort.h
src/modules/implementation/: BookManager.cpp  Borrower.cpp  SearchAndSort.cpp
src/test/: PerformanceTest.cpp  PerformanceTest.h
